<resources>
    <string name="app_name">dialer</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="save">save</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="hash1">#</string>
    <string name="ast1">*</string>
    <string name="call">call</string>
    <string name="del">DEL</string>
</resources>